--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ button {
 <div class="center" id="mainBox">
   <div class="box">
     <h1>Will you be my Valentine? 💘</h1>
-    <p>— 😭🙏🏼 for <strong>Maan jaaa laadli</strong> 🥺💖</p>
+    <p>— 😭🙏🏼 for <strong>Sapne Suhane 😭🫵🤣🙏🏼🫶</strong> 🥺💖</p>
 
     <button id="yes" onclick="yesClick()">Yes 💕</button>
     <button id="no" onmouseenter="runAway()">No 💔</button>
@@ -132,4 +132,3 @@ function startHearts() {
     heart.style.left = Math.random() * 100 + "vw";
     heart.style.animationDuration = (2 + Math.random() * 3) + "s";
     document.body.appendChild(heart);
-
