--- a/love.html
+++ b/love.html
@@ -65,7 +65,7 @@ button {
 
 <div id="box">
   <h1>Will you be my Valentine? 💘</h1>
-  <p>— 😭🙏🏼 for <b>baunii</b></p>
+  <p>— 😭🙏🏼 for <b>shrutii</b></p>
   <button id="yes" onclick="yes()">YES 💕</button>
   <button id="no" onmouseover="run()">NO 💔</button>
 </div>
